Data collectors + refactor